--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.13.4",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf/renderer": "^3.1.11",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,11 +15,16 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "html2pdf.js": "^0.10.1",
+    "pdfjs-dist": "^3.7.107",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.0.3",
+    "react-pdf-html": "^1.1.18",
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
